feat: add basic junit tests